# mahjong-cpp

./: CMakeLists.txt  Dockerfile  pyproject.toml
mahjong_calculator/: __init__.py
python/: pybind.cpp
src/core/: AppContext.cpp  AppContext.hpp
src/mahjong/core/: expected_score_calculator.cpp  expected_score_calculator.hpp  hand_separator.cpp  hand_separator.hpp  table.cpp  table.hpp
src/server/: json_parser.cpp  json_parser.hpp
